fix bug scrollbar

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -46,12 +46,6 @@ img {
     max-width: 100%;
 }
 
-.container-app {
-    height: 100vh;
-    width: 100%;
-    overflow: auto;
-}
-
 .container {
     max-width: 1366px;
     margin: auto;
