--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,4 +1,9 @@
     @media only screen and (max-width: 1280px) {
+        .container-app {
+            height: 100vh;
+            width: 100%;
+            overflow: auto;
+        }
         .mobile-menu {
             display: flex;
             position: sticky;
